src/pydjinni/generator/objc/it/objc/error/expected/include/objc/TSTAsyncThrowingCallback.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
#import "TSTFooError.h"
@protocol TSTAsyncThrowingCallback 
- (void)throwingError:(nonnull void (^)(NSError* _Nullable))completion;
@end
